<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.example.englandhoang.munimuni.StartActivity">


    <ImageView
        android:id="@+id/mIconView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/mLoginBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/mFacebookBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:background="@drawable/btn_grey"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#6D69DF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mFacebookBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/btn_grey"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="#6D69DF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mIconView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mRegBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/no_account"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
