<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.example.englandhoang.munimuni.LoginActivity">


    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_marginBottom="32dp"
        android:background="@drawable/white_boder"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/login_btn"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_alignStart="@+id/login_btn"
        android:layout_marginBottom="54dp"
        android:background="@drawable/white_boder"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/violet_border"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#6D69DF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
